fixed horizontal overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,34 @@
 .App {
   display: flex;
-  flex-direction: column-reverse;
   justify-content: space-between;
   min-height: calc(100vh - 20rem);
-  max-width: var(--space-7);
-  margin: 0 auto;
+  /* max-width: var(--space-7); */
+  margin: var(--space-3) auto;
   gap: var(--space-3);
 }
 
-/* .city-selector-main-wrapper {
-  display: none;
-} */
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-3);
+  justify-content: space-between;
+}
 
 @media screen and (min-width: 576px) {
-  .App {
-    justify-content: flex-start;
-    gap: var(--space-4);
-    flex-direction: column;
+  .content {
+    flex-direction: column-reverse;
   }
 }
 
 @media screen and (min-width: 992px) {
   .App {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    max-width: unset;
-    width: 100%;
-    min-height: calc(100vh - 16rem);
     justify-content: center;
-    place-items: center;
   }
-
-  /* .city-selector-main-wrapper {
-    display: grid;
-  } */
+  .content {
+    flex-direction: row-reverse;
+    gap: var(--space-4);
+  }
 }
-
-
 
 
 
