--- a/src/css/city-selector.css
+++ b/src/css/city-selector.css
@@ -87,6 +87,7 @@
   display: flex;
   gap: var(--space-2);
   width: 100%;
+  overflow: hidden; 
 }
 
 .options-wrapper > * {
