--- a/src/global.css
+++ b/src/global.css
@@ -142,6 +142,12 @@
   --dark: var(--neutral-900);
   --background-color: var(--neutral-950);
   --font-color: var(--neutral-100);
+
+}
+
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 i,
@@ -159,14 +165,6 @@ data,
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-}
-
-.text-regular,
-body {
-  font-family: var(--font-family-default);
-  font-weight: 400;
-  font-style: normal;
-  text-transform: math-auto;
 }
 
 .text-bold {
@@ -190,15 +188,20 @@ body {
   scroll-behavior: smooth;
 }
 
+.text-regular,
 body {
   font-size: var(--font-size-default);
-  font-family: var(--font-family-default);
+  font-family: var(--font-family-default); /* Duplicate declaration */
   background: var(--background-color);
   color: var(--white);
   max-width: var(--space-8);
   margin: 0 auto;
   padding: var(--space-3);
   transition: all 0.3s;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: math-auto;
+  overflow-x: hidden;
 }
 
 @media screen and (min-width: 768px) {
